<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
>


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_giga">

      <!--<RelativeLayout
        android:id="@+id/sample_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
      >

        <Button
          android:id="@+id/sample_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_medium"
          android:text="Sign In"
          android:layout_centerInParent="true"
        />

        <TextView
          android:id="@+id/sample_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Hello World!"
          android:layout_below="@id/sample_button"
          android:layout_centerHorizontal="true"
        />

      </RelativeLayout>-->

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sample_sign_in_image_height"
        android:layout_marginBottom="@dimen/margin_giga"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

      <!-- Email Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/sample_sign_in_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium">
        <android.support.design.widget.TextInputEditText
          android:id="@+id/sample_sign_in_email_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/sample_sign_in_email"
          android:inputType="textEmailAddress"/>
      </android.support.design.widget.TextInputLayout>

      <!-- Password Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/sample_sign_in_pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium">
        <android.support.design.widget.TextInputEditText
          android:id="@+id/sample_sign_in_pass_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/sample_sign_in_pass"
          android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.v7.widget.AppCompatButton
        android:id="@+id/sample_sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_giga"
        android:layout_marginBottom="@dimen/margin_giga"
        android:padding="@dimen/margin_large"
        android:text="@string/sample_sign_in_button"/>

      <TextView
        style="@style/Text.Large.Unimportant"
        android:id="@+id/sample_sign_in_link_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_giga"
        android:gravity="center"
        android:text="@string/sample_sign_in_link"
      />

    </LinearLayout>
  </ScrollView>

</layout>